# mastermind

./: .gitignore  README.md  pyproject.toml
docs/: mastermind_as_a_service.md
examples/: quickstart.py  triangle.py
mastermind/: __init__.py  agent.py  directive.py  orchestrator.py  plan.py
tests/: test_directive.py  test_orchestrator.py  test_plan.py  test_registry.py
