# SPDX-License-Identifier: Apache-2.0
# (c) 2024-2026 GATERAGE — MASTERMIND: Strategic Orchestrator

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastermind"
version = "0.1.0"
description = "MASTERMIND — strategic orchestration agent. Directive → plan → execute loop for autonomous multi-agent systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "GATERAGE / Professor Codephreak" },
]
keywords = ["mastermind", "orchestrator", "planning", "agent", "agentic", "delegation", "directive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
aglm = ["aglm>=0.1.0"]   # github.com/GATERAGE/aglm — autonomous decision substrate
rage = ["rage>=0.2.0"]   # github.com/GATERAGE/RAGE — retrieval substrate
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/GATERAGE/mastermind"
Documentation = "https://rage.pythai.net"
Repository = "https://github.com/GATERAGE/mastermind"
"Companion: aGLM" = "https://github.com/GATERAGE/aglm"
"Companion: RAGE" = "https://github.com/GATERAGE/RAGE"
"mindX consumer" = "https://github.com/agenticplace"

[tool.setuptools.packages.find]
include = ["mastermind*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
